# MelkamBrowser

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: index.html
example/scripts/: index.py
example/styles/: styles.css
src/melkam_browser/: __init__.py  __main__.py  app.py
src/melkam_browser/core/: __init__.py  css.py  dom.py  layout.py  network.py  page.py  parser.py  runtime.py  runtime_old.py  selector.py  storage.py
src/melkam_browser/gui/: __init__.py  browser_view.py  favicon_manager.py  icon_manager.py  main_window.py
tests/: test_runtime.py  test_storage.py
