[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melkam-browser"
version = "0.1.0"
description = "Melkam Browser: a Python-native desktop browser prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
  "httpx>=0.27",
]

[project.scripts]
melkam-browser = "melkam_browser.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]